ADD: new icons, new resources for fragments, new modules for dagger, presenter for navigation drawer UPD: resourc for activity, toolbar, manifest, start use of AndroidAnnotation

--- a/seredasv/src/main/res/layout/toolbar.xml
+++ b/seredasv/src/main/res/layout/toolbar.xml
@@ -5,5 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
+    android:animateLayoutChanges="true"
     android:background="@color/primary"
+    android:minHeight="?attr/actionBarSize"
+    app:contentInsetLeft="0dp"
+    app:contentInsetStart="0dp"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
