update adapters, add new layout for notes adapter and update notes adapter

--- a/seredasv/src/main/res/layout/item_recycler_view.xml
+++ b/seredasv/src/main/res/layout/item_recycler_view.xml
@@ -33,7 +33,7 @@
             android:textColor="@android:color/black" />
 
         <TextView
-            android:id="@+id/tv_content"
+            android:id="@+id/tv_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_toEndOf="@+id/ll_color"
