--- a/seredasv/src/main/res/values/dimens.xml
+++ b/seredasv/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
     <dimen name="dim_4">4dp</dimen>
     <dimen name="dim_8">8dp</dimen>
     <dimen name="dim_16">16dp</dimen>
+    <dimen name="dim_24">24dp</dimen>
     <dimen name="dim_32">32dp</dimen>
     <dimen name="dim_48">48dp</dimen>
 </resources>
