add libraries: color picker and rich edit text, view pager, change models, updae adapters, update layouts

--- a/seredasv/src/main/res/values/dimens.xml
+++ b/seredasv/src/main/res/values/dimens.xml
@@ -1,8 +1,12 @@
 <resources>
+    <dimen name="dim_2">2dp</dimen>
     <dimen name="dim_4">4dp</dimen>
     <dimen name="dim_8">8dp</dimen>
     <dimen name="dim_16">16dp</dimen>
     <dimen name="dim_24">24dp</dimen>
     <dimen name="dim_32">32dp</dimen>
+    <dimen name="dim_40">40dp</dimen>
     <dimen name="dim_48">48dp</dimen>
+    <dimen name="dim_72">72dp</dimen>
+    <dimen name="dim_96">96dp</dimen>
 </resources>
