--- a/seredasv/src/main/res/layout/item_notes_recycler_view.xml
+++ b/seredasv/src/main/res/layout/item_notes_recycler_view.xml
@@ -4,14 +4,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="@dimen/dim_48"
-    app:cardCornerRadius="@dimen/dim_4"
-    app:cardElevation="@dimen/dim_4">
+    android:layout_height="@dimen/dim_96"
+    android:minHeight="@dimen/dim_96"
+    app:cardCornerRadius="@dimen/dim_2"
+    app:cardElevation="@dimen/dim_2">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical">
 
         <LinearLayout
             android:id="@+id/ll_color"
@@ -28,6 +30,7 @@
             android:layout_height="match_parent"
             android:layout_toEndOf="@+id/ll_color"
             android:layout_toRightOf="@+id/ll_color"
+            android:gravity="center_vertical"
             android:orientation="vertical"
             android:weightSum="3">
 
@@ -77,23 +80,14 @@
                 android:textColor="@android:color/black"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/tv_content"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="@dimen/dim_24"
-                android:layout_marginTop="@dimen/dim_24"
-                android:ellipsize="marquee"
-                android:gravity="center_vertical"
-                android:paddingLeft="@dimen/dim_8"
-                android:text="content"
-                android:textColor="@android:color/black" />
-
             <LinearLayout
+                android:id="@+id/ll_bottom_info"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dim_24"
                 android:layout_alignParentBottom="true"
                 android:orientation="horizontal"
+                android:paddingBottom="@dimen/dim_2"
+                android:paddingTop="@dimen/dim_2"
                 android:weightSum="3">
 
                 <LinearLayout
@@ -115,6 +109,7 @@
                         android:id="@+id/tv_category"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:gravity="center_vertical"
                         android:text="category"
                         android:textColor="@android:color/black" />
                 </LinearLayout>
@@ -138,6 +133,7 @@
                         android:id="@+id/tv_tag"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:gravity="center_vertical"
                         android:text="tag"
                         android:textColor="@android:color/black" />
                 </LinearLayout>
@@ -161,10 +157,23 @@
                         android:id="@+id/tv_location"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:gravity="center_vertical"
                         android:text="location"
                         android:textColor="@android:color/black" />
                 </LinearLayout>
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/tv_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_above="@+id/ll_bottom_info"
+                android:layout_below="@+id/tv_title"
+                android:gravity="center_vertical"
+                android:lines="2"
+                android:paddingLeft="@dimen/dim_8"
+                android:text="content"
+                android:textColor="@android:color/black" />
         </RelativeLayout>
 
     </RelativeLayout>
