--- a/seredasv/src/main/res/layout/item_recycler_view.xml
+++ b/seredasv/src/main/res/layout/item_recycler_view.xml
@@ -11,7 +11,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:gravity="center_vertical">
 
         <LinearLayout
             android:id="@+id/ll_color"
