add: new icons, new colors, styles change toolbar color update fragment_note layout

--- a/seredasv/src/main/res/values/colors.xml
+++ b/seredasv/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="primary">#FF3631</color>
     <color name="primary_dark">#D61616</color>
     <color name="accent">#FF3631</color>
+
+    <color name="blue_200">#FF90CAF9</color>
+    <color name="blue_500">#FF2196F3</color>
+    <color name="blue_700">#FF1976D2</color>
+    <color name="dark_gray">#302E30</color>
 </resources>
