--- a/seredasv/src/main/res/layout/fragment_note.xml
+++ b/seredasv/src/main/res/layout/fragment_note.xml
@@ -1,9 +1,178 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/dark_gray"
     android:orientation="vertical">
 
     <include layout="@layout/toolbar" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:id="@+id/ll_date"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dim_48"
+            android:layout_alignParentTop="true">
+
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="@dimen/dim_40"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:gravity="center"
+                android:text="08" />
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="@dimen/dim_40"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:gravity="center"
+                android:text="01:11" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_toLeftOf="@+id/tv_time"
+                android:layout_toRightOf="@+id/tv_date"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/dim_8"
+                android:paddingStart="@dimen/dim_8"
+                android:weightSum="2">
+
+                <TextView
+                    android:id="@+id/tv_week_day"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="Tuesday" />
+
+                <TextView
+                    android:id="@+id/tv_month_year"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="March 2016" />
+            </LinearLayout>
+        </RelativeLayout>
+
+        <HorizontalScrollView
+            android:id="@+id/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/bold"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_bold" />
+
+                <ImageButton
+                    android:id="@+id/italic"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_italic" />
+
+                <ImageButton
+                    android:id="@+id/underline"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_underline" />
+
+                <ImageButton
+                    android:id="@+id/strikethrough"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_strikethrough" />
+
+                <ImageButton
+                    android:id="@+id/bullet"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_bullet" />
+
+                <ImageButton
+                    android:id="@+id/quote"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_quote" />
+
+                <ImageButton
+                    android:id="@+id/link"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_insert_link" />
+
+                <ImageButton
+                    android:id="@+id/clear"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:background="?android:selectableItemBackground"
+                    android:contentDescription="@null"
+                    android:scaleType="center"
+                    android:src="@mipmap/ic_format_clear" />
+
+            </LinearLayout>
+
+        </HorizontalScrollView>
+
+        <io.github.mthli.knife.KnifeText
+            android:id="@+id/knife_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/tools"
+            android:layout_below="@+id/ll_date"
+            android:background="@android:color/transparent"
+            android:gravity="top|start"
+            android:paddingEnd="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:paddingTop="16dp"
+            android:scrollbars="vertical"
+            app:bulletColor="@color/blue_500"
+            app:bulletGapWidth="@dimen/dim_8"
+            app:bulletRadius="@dimen/dim_2"
+            app:historyEnable="true"
+            app:historySize="99"
+            app:linkColor="@color/blue_500"
+            app:linkUnderline="true"
+            app:quoteCapWidth="@dimen/dim_2"
+            app:quoteColor="@color/blue_500"
+            app:quoteStripeWidth="@dimen/dim_8" />
+    </RelativeLayout>
 
 </LinearLayout>
