--- a/seredasv/src/main/res/layout/toolbar.xml
+++ b/seredasv/src/main/res/layout/toolbar.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="?android:actionBarSize"
     android:animateLayoutChanges="true"
-    android:background="@color/primary"
+    android:background="@color/blue_500"
     android:minHeight="?attr/actionBarSize"
     app:contentInsetLeft="0dp"
     app:contentInsetStart="0dp"
