--- a/seredasv/src/main/res/values/styles.xml
+++ b/seredasv/src/main/res/values/styles.xml
@@ -1,8 +1,11 @@
 <resources>
     <style name="AppTheme" parent="@style/Theme.AppCompat.NoActionBar">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
+        <item name="colorPrimary">@color/blue_500</item>
+        <item name="colorPrimaryDark">@color/blue_700</item>
+        <item name="colorAccent">@color/blue_500</item>
+
+        <item name="android:textColorHighlight">@color/blue_200</item>
+
         <item name="android:windowBackground">@android:color/white</item>
         <item name="windowActionBar">false</item>
         <item name="android:backgroundDimEnabled">false</item>
